--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -15,12 +15,12 @@
     },
     "peerDependencies": {
         "@pankod/refine-core": "^3.23.2",
+        "@types/react": "^17.0.0 || ^18.0.0",
+        "@types/react-dom": "^17.0.0 || ^18.0.0",
         "antd": "^5.0.3",
         "dayjs": "^1.10.7",
         "react": "^17.0.0 || ^18.0.0",
-        "react-dom": "^17.0.0 || ^18.0.0",
-        "@types/react": "^17.0.0 || ^18.0.0",
-        "@types/react-dom": "^17.0.0 || ^18.0.0"
+        "react-dom": "^17.0.0 || ^18.0.0"
     },
     "devDependencies": {
         "@pankod/refine-cli": "^1.7.0",
@@ -46,12 +46,13 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "@pankod/refine-ui-types": "^0.14.0",
         "@ant-design/icons": "^4.5.0",
+        "@ant-design/pro-layout": "^7.3.4",
+        "@pankod/refine-ui-types": "^0.14.0",
+        "@tanstack/react-query": "^4.10.1",
         "antd": "^5.0.3",
         "dayjs": "^1.10.7",
         "react-markdown": "^6.0.1",
-        "@tanstack/react-query": "^4.10.1",
         "remark-gfm": "^1.0.0",
         "sunflower-antd": "1.0.0-beta.3",
         "tslib": "^2.3.1"
