fix: add target `es6`

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -4,6 +4,7 @@
     ],
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
+        "target": "ES6",
         "rootDir": "./src",
         "baseUrl": ".",
         "allowSyntheticDefaultImports": true,
