--- a/examples/nextjs/appdir/package.json
+++ b/examples/nextjs/appdir/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "refine-next",
+    "name": "refine-nextjs-appdir",
     "version": "3.25.0",
     "private": true,
     "scripts": {
-        "start": "NODE_OPTIONS=--max_old_space_size=4096 PORT=3001 next dev",
+        "start": "NODE_OPTIONS=--max_old_space_size=4096 PORT=3002 next dev",
         "build": "next build",
         "start:prod": "next start",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'"
