--- a/examples/customization/customTheme/antd/package.json
+++ b/examples/customization/customTheme/antd/package.json
@@ -3,7 +3,6 @@
     "version": "3.25.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "^6.1.2",
         "@pankod/refine-antd": "^3.64.4",
         "@pankod/refine-core": "^3.90.4",
         "@pankod/refine-react-router-v6": "^3.36.6",
@@ -11,7 +10,6 @@
         "@types/node": "^12.20.11",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "craco-less": "^2.0.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "@uiw/react-md-editor": "^3.19.5",
@@ -19,10 +17,10 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "start": "DISABLE_ESLINT_PLUGIN=true craco start",
-        "build": "DISABLE_ESLINT_PLUGIN=true craco build",
-        "test": "craco test",
-        "eject": "craco eject"
+        "start": "DISABLE_ESLINT_PLUGIN=true PORT=3001 react-scripts start",
+        "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "browserslist": {
         "production": [
