--- a/packages/inferencer/package.json
+++ b/packages/inferencer/package.json
@@ -132,7 +132,7 @@
         "remark-gfm": "^1.0.0",
         "tslib": "^2.3.1",
         "prettier": "^2.7.1",
-        "react-live": "github:aliemir/react-live"
+        "react-live": "^3.1.1"
     },
     "author": "Refine",
     "license": "MIT",
