--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -25,7 +25,7 @@
     "next": "^13.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-live": "github:aliemir/react-live"
+    "react-live": "^3.1.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
