docs(blog): json error post

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -170,3 +170,8 @@ deborah_emeni:
     title: Software Engineer
     url: https://github.com/debemenitammy
     image_url: https://github.com/debemenitammy.png
+
+chukwuka_reuben:
+    name: Chukwuka Reuben
+    title: Frontend Developer
+    image_url: /img/generic-profile.png
