ci: update build-all-examples workflow

--- a/.github/workflows/examples-build.yml
+++ b/.github/workflows/examples-build.yml
@@ -33,6 +33,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: |
           npm ci
-          npm run bootstrap -- --scope "refine*"
-          npm run build -- --scope "refine*"
+          npm run bootstrap -- --scope "*"
+          npm run build -- --scope "*"
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
