--- a/documentation/package.json
+++ b/documentation/package.json
@@ -16,6 +16,7 @@
         "@docusaurus/core": "^2.1.0",
         "@docusaurus/plugin-client-redirects": "^2.1.0",
         "@docusaurus/preset-classic": "^2.1.0",
+        "@headlessui/react": "^1.7.5",
         "@mdx-js/react": "^1.6.21",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@types/react-dom": "^17.0.11",
