--- a/examples/blog-react-memoization-memo/package.json
+++ b/examples/blog-react-memoization-memo/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.0",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
