--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "@pankod/refine-live-previews",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "PORT=3030 nodemon --watch ./node_modules --watch ./src --watch ./pages --ext ts,tsx,js,jsx --exec \"next build --no-lint && next start\"",
-    "dev": "PORT=3030 next dev",
-    "build": "next build",
-    "start:prod": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@pankod/refine-antd": "^3.48.5",
-    "@pankod/refine-core": "^3.74.0",
-    "@pankod/refine-react-router-v6": "^3.36.0",
-    "@pankod/refine-simple-rest": "^3.31.0",
-    "@pankod/refine-mui": "^3.45.2",
-    "@pankod/refine-react-hook-form": "^3.33.2",
-    "@pankod/refine-react-table": "^4.7.2",
-    "@pankod/refine-mantine": "^1.2.0",
-    "@pankod/refine-chakra-ui": "^1.0.0",
-    "@pankod/refine-inferencer": "^1.0.0",
-    "lz-string": "^1.4.4",
-    "next": "^13.0.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@aliemir/react-live": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "@types/lz-string": "^1.3.34",
-    "@types/node": "^12.20.11",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "jest": "^27.5.1",
-    "nodemon": "^2.0.20",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.7.4"
-  },
-  "author": {
-    "name": "Ali Emir Sen",
-    "email": "ali@refine.dev"
-  }
+    "name": "@pankod/refine-live-previews",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "PORT=3030 nodemon --watch ./node_modules --watch ./src --watch ./pages --ext ts,tsx,js,jsx --exec \"next build --no-lint && next start\"",
+        "dev": "PORT=3030 next dev",
+        "_build": "next build",
+        "start:prod": "next start",
+        "lint": "next lint",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@pankod/refine-antd": "^3.48.5",
+        "@pankod/refine-core": "^3.74.0",
+        "@pankod/refine-react-router-v6": "^3.36.0",
+        "@pankod/refine-simple-rest": "^3.31.0",
+        "@pankod/refine-mui": "^3.45.2",
+        "@pankod/refine-react-hook-form": "^3.33.2",
+        "@pankod/refine-react-table": "^4.7.2",
+        "@pankod/refine-mantine": "^1.2.0",
+        "@pankod/refine-chakra-ui": "^1.0.0",
+        "@pankod/refine-inferencer": "^1.0.0",
+        "lz-string": "^1.4.4",
+        "next": "^13.0.6",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "@aliemir/react-live": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^26.0.24",
+        "@types/lz-string": "^1.3.34",
+        "@types/node": "^12.20.11",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "jest": "^27.5.1",
+        "nodemon": "^2.0.20",
+        "ts-jest": "^27.1.3",
+        "typescript": "^4.7.4"
+    },
+    "author": {
+        "name": "Ali Emir Sen",
+        "email": "ali@refine.dev"
+    }
 }
