--- a/examples/blog-sveltekit-crud/package.json
+++ b/examples/blog-sveltekit-crud/package.json
@@ -31,8 +31,7 @@
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"react-scripts": "^2.8.0"
+		"typescript": "^4.7.4"
 	},
 	"type": "module"
 }
