--- a/examples/blog-sveltekit-crud/package.json
+++ b/examples/blog-sveltekit-crud/package.json
@@ -31,7 +31,8 @@
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"vite": "^3.0.4"
 	},
 	"type": "module"
 }
