fix: blog-sveltekit-crud

--- a/examples/blog-sveltekit-crud/package.json
+++ b/examples/blog-sveltekit-crud/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
 		"@smui/button": "^6.1.0",
