--- a/examples/blog-react-aria/package.json
+++ b/examples/blog-react-aria/package.json
@@ -13,7 +13,6 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^14.1.1",
         "@types/jest": "^26.0.24",
-        "@react-stately/overlay": "^3.4.3",
         "react": "^18.0.0",
         "react-aria": "^0.1.0",
         "react-dom": "^18.0.0",
@@ -31,7 +30,7 @@
     },
     "scripts": {
         "dev": "react-scripts start",
-        "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+        "_build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
