chore: ignore build "blog-sveltekit-crud"

--- a/.github/workflows/examples-build.yml
+++ b/.github/workflows/examples-build.yml
@@ -33,6 +33,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: |
           npm ci
-          npm run bootstrap -- --scope "*"
-          npm run build -- --scope "*"
+          npm run bootstrap -- --scope "*" --ignore blog-sveltekit-crud
+          npm run build -- --scope "*" --ignore blog-sveltekit-crud
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
