--- a/.github/workflows/examples-build.yml
+++ b/.github/workflows/examples-build.yml
@@ -1,38 +1,37 @@
 name: Build all examples
 
 on:
-  pull_request:
-    types: [labeled, synchronize]
-  schedule:
-    - cron: '0 6 * * *'
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: false 
-  
+    pull_request:
+        types: [labeled, synchronize]
+    schedule:
+        - cron: "0 6 * * *"
+    workflow_dispatch:
+        inputs:
+            environment:
+                description: "Environment to run tests against"
+                type: environment
+                required: false
 
 jobs:
-  build-all-examples:
-    runs-on: ubuntu-latest
+    build-all-examples:
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
+        strategy:
+            matrix:
+                node-version: [16.x]
 
-    steps:
-      - name: Get PR labels
-        id: pr-labels
-        uses: joerick/pr-labels-action@v1.0.6
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-          registry-url: https://registry.npmjs.org/
-      - run: |
-          npm ci
-          npm run bootstrap -- --scope "*" --ignore blog-sveltekit-crud
-          npm run build -- --scope "*" --ignore blog-sveltekit-crud
-        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
+        steps:
+            - name: Get PR labels
+              id: pr-labels
+              uses: joerick/pr-labels-action@v1.0.6
+            - uses: actions/checkout@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  registry-url: https://registry.npmjs.org/
+            - run: |
+                  npm ci
+                  npm run bootstrap -- --scope "*" --ignore blog-sveltekit-crud
+                  npm run build -- --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
+              if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
