fix: add uiw/react-md-editor package

--- a/examples/access-control-casbin/package.json
+++ b/examples/access-control-casbin/package.json
@@ -27,7 +27,8 @@
         "react-dom": "^18.0.0",
         "react-mde": "^11.1.0",
         "react-scripts": "^5.0.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "@uiw/react-md-editor": "^3.19.5"
     },
     "devDependencies": {
         "assert": "^2.0.0",
