--- a/examples/with-vite/package.json
+++ b/examples/with-vite/package.json
@@ -13,7 +13,8 @@
         "@pankod/refine-simple-rest": "^3.37.4",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-mde": "^11.1.0"
+        "react-mde": "^11.1.0",
+        "@uiw/react-md-editor": "^3.19.5"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
