chore: add missign jest types

--- a/packages/cloud/package.json
+++ b/packages/cloud/package.json
@@ -35,6 +35,7 @@
         "@esbuild-plugins/node-resolve": "^0.1.4",
         "@types/lodash": "^4.14.171",
         "@tanstack/react-query": "^4.10.1",
+        "@types/jest": "^27.5.2",
         "jest": "^27.5.1",
         "react-router-dom": "6.3.0",
         "ts-jest": "^27.1.3",
