--- a/packages/inferencer/package.json
+++ b/packages/inferencer/package.json
@@ -96,6 +96,7 @@
         "@pankod/refine-core": "^3.88.4",
         "@pankod/refine-mantine": "^1.11.8",
         "@pankod/refine-mui": "^3.55.2",
+        "@types/lodash": "^4.14.171",
         "@pankod/refine-react-hook-form": "^3.37.0",
         "@pankod/refine-react-table": "^4.9.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
@@ -104,7 +105,7 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
-        "@types/jest": "^26.0.24",
+        "@types/jest": "^27.5.2",
         "@types/pluralize": "^0.0.29",
         "@types/prismjs": "^1.26.0",
         "@types/react": "^18.0.0",
