--- a/packages/antd-audit-log/package.json
+++ b/packages/antd-audit-log/package.json
@@ -30,6 +30,7 @@
         "@types/json-stable-stringify": "^1.0.34",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/jest": "^27.5.2",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
         "tslib": "^2.3.1",
