--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/eslint": "^7.28.2",
     "@types/inquirer": "^8.1.3",
+    "@types/jest": "^27.5.2",
     "@types/jscodeshift": "0.11.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
