--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -25,6 +25,7 @@
     "@pankod/refine-core": "^3.86.0",
     "@esbuild-plugins/node-resolve": "^0.1.4",
     "@types/pluralize": "^0.0.29",
+    "@types/jest": "^27.5.2",
     "jest": "^27.5.1",
     "nock": "^13.1.3",
     "ts-jest": "^27.1.3",
