--- a/packages/hasura/package.json
+++ b/packages/hasura/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@pankod/refine-core": "^3.86.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
+        "@types/jest": "^27.5.2",
         "jest": "^27.5.1",
         "nock": "^13.1.3",
         "ts-jest": "^27.1.3",
