--- a/packages/kbar/package.json
+++ b/packages/kbar/package.json
@@ -34,6 +34,7 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "react-router-dom": "6.3.0",
+        "@types/jest": "^27.5.2",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
         "tslib": "^2.3.1",
