--- a/packages/react-router-v6/package.json
+++ b/packages/react-router-v6/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@pankod/refine-core": "^3.90.2",
     "@esbuild-plugins/node-resolve": "^0.1.4",
+    "@types/jest": "^27.5.2",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
