--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -23,6 +23,7 @@
   "module": "dist/esm/index.js",
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
+    "@types/jest": "^27.5.2",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
