--- a/packages/remix/package.json
+++ b/packages/remix/package.json
@@ -28,6 +28,7 @@
     "@remix-run/node": "^1.6.7",
     "@esbuild-plugins/node-resolve": "^0.1.4",
     "@types/qs": "^6.9.7",
+    "@types/jest": "^27.5.2",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
