--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,7 +24,7 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
-        "@types/jest": "^27.5.2",
+        "@types/jest": "^29.2.4",
         "@types/lodash": "^4.14.171",
         "@types/papaparse": "^5.2.5",
         "@types/pluralize": "^0.0.29",
@@ -34,9 +34,10 @@
         "@types/react-router-dom": "^5.1.8",
         "@types/testing-library__jest-dom": "^5.14.3",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
         "react-router-dom": "6.3.0",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^29.0.3",
         "tsup": "^5.11.13",
         "typescript": "^4.7.4"
     },
