--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -28,14 +28,15 @@
     "@aliemir/react-live": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.2.4",
     "@types/lz-string": "^1.3.34",
     "@types/node": "^12.20.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "nodemon": "^2.0.20",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.7.4"
   },
   "author": {
