--- a/packages/nextjs-router/package.json
+++ b/packages/nextjs-router/package.json
@@ -55,9 +55,10 @@
         "@pankod/refine-core": "^3.74.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
         "@types/qs": "^6.9.7",
-        "jest": "^27.5.1",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
         "next": "^13.0.6",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^29.0.3",
         "tslib": "^2.3.1",
         "tsup": "^5.11.13"
     },
