--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -23,9 +23,10 @@
   "module": "dist/esm/index.js",
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
-    "@types/jest": "^27.5.2",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.3.1",
     "tsup": "^5.11.13",
     "typescript": "^4.7.4"
