--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,14 +19,15 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
-        "@types/jest": "^27.5.2",
+        "@types/jest": "^29.2.4",
         "@types/testing-library__jest-dom": "^5.14.3",
         "@types/lodash": "^4.14.171",
         "esbuild-copy-static-files": "^0.1.0",
         "esbuild-plugin-inline-image": "^0.0.8",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
-        "ts-jest": "^27.1.3",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "ts-jest": "^29.0.3",
         "tsup": "^5.11.13",
         "typescript": "^4.7.4",
         "nock": "^13.1.3"
