--- a/packages/strapi/package.json
+++ b/packages/strapi/package.json
@@ -31,10 +31,11 @@
   "devDependencies": {
     "@pankod/refine-core": "^3.86.0",
     "@esbuild-plugins/node-resolve": "^0.1.4",
-    "@types/jest": "^27.5.2",
-    "jest": "^27.5.1",
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "nock": "^13.1.3",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.3.1",
     "tsup": "^5.11.13"
   },
