--- a/packages/antd-audit-log/package.json
+++ b/packages/antd-audit-log/package.json
@@ -30,8 +30,10 @@
         "@types/json-stable-stringify": "^1.0.34",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "jest": "^27.5.1",
-        "ts-jest": "^27.1.3",
+        "@types/jest": "^29.2.4",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "ts-jest": "^29.0.3",
         "tslib": "^2.3.1",
         "tsup": "^5.11.13",
         "typescript": "^4.7.4"
