--- a/packages/cloud/package.json
+++ b/packages/cloud/package.json
@@ -35,9 +35,11 @@
         "@esbuild-plugins/node-resolve": "^0.1.4",
         "@types/lodash": "^4.14.171",
         "@tanstack/react-query": "^4.10.1",
-        "jest": "^27.5.1",
+        "@types/jest": "^29.2.4",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
         "react-router-dom": "6.3.0",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^29.0.3",
         "tslib": "^2.3.1",
         "tsup": "^5.11.13"
     },
