--- a/packages/inferencer/package.json
+++ b/packages/inferencer/package.json
@@ -96,6 +96,7 @@
         "@pankod/refine-core": "^3.88.4",
         "@pankod/refine-mantine": "^1.11.8",
         "@pankod/refine-mui": "^3.55.2",
+        "@types/lodash": "^4.14.171",
         "@pankod/refine-react-hook-form": "^3.37.0",
         "@pankod/refine-react-table": "^4.9.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
@@ -104,7 +105,7 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
-        "@types/jest": "^26.0.24",
+        "@types/jest": "^29.2.4",
         "@types/pluralize": "^0.0.29",
         "@types/prismjs": "^1.26.0",
         "@types/react": "^18.0.0",
@@ -113,10 +114,11 @@
         "esbuild-copy-static-files": "^0.1.0",
         "esbuild-plugin-inline-image": "^0.0.8",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
         "react-router-dom": "6.3.0",
         "react-test-renderer": "^18.2.0",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^29.0.3",
         "tsup": "^5.11.13",
         "typescript": "^4.7.4"
     },
