--- a/packages/remix/package.json
+++ b/packages/remix/package.json
@@ -28,8 +28,10 @@
     "@remix-run/node": "^1.6.7",
     "@esbuild-plugins/node-resolve": "^0.1.4",
     "@types/qs": "^6.9.7",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.3.1",
     "tsup": "^5.11.13"
   },
