--- a/packages/simple-rest/package.json
+++ b/packages/simple-rest/package.json
@@ -23,12 +23,14 @@
   "author": "refine",
   "module": "dist/esm/index.js",
   "devDependencies": {
-    "@pankod/refine-core": "^3.86.0",
-    "@pankod/refine-cli": "^1.9.0",
     "@esbuild-plugins/node-resolve": "^0.1.4",
-    "jest": "^27.5.1",
+    "@pankod/refine-cli": "^1.9.0",
+    "@pankod/refine-core": "^3.86.0",
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "nock": "^13.1.3",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.3.1",
     "tsup": "^5.11.13",
     "warn-once": "^0.1.0"
