--- a/examples/auth-headless/package.json
+++ b/examples/auth-headless/package.json
@@ -13,8 +13,7 @@
         "@pankod/refine-react-router-v6": "^3.38.0",
         "@pankod/refine-simple-rest": "^3.37.4",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-mde": "^11.1.0"
+        "react-dom": "^18.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
