--- a/examples/table-handson/package.json
+++ b/examples/table-handson/package.json
@@ -14,8 +14,7 @@
         "handsontable": "^12.1.2",
         "lodash": "^4.17.21",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-mde": "^11.1.0"
+        "react-dom": "^18.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
