ci(all-examples): run concurrently with yarn

--- a/.github/workflows/examples-build.yml
+++ b/.github/workflows/examples-build.yml
@@ -31,7 +31,7 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   registry-url: https://registry.npmjs.org/
             - run: |
-                  npm ci
-                  npm run bootstrap -- --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
-                  npm run build -- --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
+                  yarn --immutable
+                  yarn bootstrap -- --npm-client=yarn --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
+                  yarn build -- --concurrency=20 --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
               if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
