--- a/.github/workflows/examples-build.yml
+++ b/.github/workflows/examples-build.yml
@@ -30,8 +30,12 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   registry-url: https://registry.npmjs.org/
-            - run: |
-                  npm ci
-                  npm run bootstrap -- --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
-                  npm run build -- --concurrency=20 --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
-              if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
+            - name: Install dependencies
+                run: npm ci
+                if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
+            - name: Bootstrap
+                run: npm run bootstrap -- --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
+                if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
+            - name: Build
+                run: npm run build -- --concurrency=20 --scope "*" --ignore blog-sveltekit-crud --ignore blog-react-aria
+                if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(steps.pr-labels.outputs.labels, ' build-examples '))
