chore: fix example name

--- a/examples/form-mui-use-modal-form/package.json
+++ b/examples/form-mui-use-modal-form/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "form-muse-modal-antd-form",
+    "name": "form-mui-use-modal-form",
     "version": "3.25.0",
     "private": true,
     "dependencies": {
