chore: update examples path

--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/lerna/schemas/lerna-schema.json",
   "packages": [
     "packages/*",
-    "examples/**/**/*"
+    "examples/*"
   ],
   "registry": "https://registry.npmjs.org/",
   "npmClient": "npm",
