--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-dom": "^18.0.0",
     "react-refresh": "^0.11.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@nrwl/nx-cloud": "^15.0.2"
   },
   "engines": {
     "node": ">=16"
