--- a/examples/blog-ecommerce/package.json
+++ b/examples/blog-ecommerce/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "NODE_OPTIONS=--max_old_space_size=4096 next dev",
-        "build": "next build",
+        "build": "next build && rm -rf .next/cache",
         "start": "next start",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'"
     },
