Revert "chore(live-previews): rename package"
This reverts commit 6dc05a3169a689a3eb9000c6d36e1f59ae6c95f6.

--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "refine-live-previews",
+  "name": "@pankod/refine-live-previews",
   "version": "0.1.0",
   "private": true,
   "scripts": {
