--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "PORT=3030 nodemon --watch ./node_modules --watch ./src --watch ./pages --ext ts,tsx,js,jsx --exec \"next build --no-lint && next start\"",
     "dev": "PORT=3030 next dev",
-    "build": "next build",
+    "build": "next build && rm -rf .next/cache",
     "start:prod": "next start",
     "lint": "next lint",
     "test": "jest"
