docs(blog): add em vs rem post

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -175,3 +175,8 @@ chukwuka_reuben:
     name: Chukwuka Reuben
     title: Frontend Developer
     image_url: /img/generic-profile.png
+
+fimber_elemuwa:
+    name: Fimber Elemuwa
+    title: Web Developer
+    image_url: /img/generic-profile.png
