docs(live-previews): ability to pass css to live previews

--- a/documentation/package.json
+++ b/documentation/package.json
@@ -22,6 +22,7 @@
         "@types/react-dom": "^17.0.11",
         "autoprefixer": "^10.4.8",
         "axios": "^0.24.0",
+        "base64url": "^3.0.1",
         "clsx": "^1.1.1",
         "docusaurus-plugin-copy": "^0.1.1",
         "dotenv": "^16.0.2",
