--- a/examples/with-javascript/package.json
+++ b/examples/with-javascript/package.json
@@ -8,6 +8,7 @@
         "@pankod/refine-cli": "^1.17.0",
         "@pankod/refine-react-router-v6": "^3.38.0",
         "@pankod/refine-simple-rest": "^3.37.4",
+        "cross-env": "^7.0.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "@uiw/react-md-editor": "^3.19.5",
