--- a/examples/with-nextjs/package.json
+++ b/examples/with-nextjs/package.json
@@ -14,6 +14,7 @@
         "@pankod/refine-cli": "^1.17.0",
         "@pankod/refine-nextjs-router": "^4.1.0",
         "@pankod/refine-simple-rest": "^3.37.4",
+        "cross-env": "^7.0.3",
         "next": "^13.0.6",
         "nookies": "^2.5.2",
         "react": "^18.0.0",
