--- a/examples/blog-ecommerce/package.json
+++ b/examples/blog-ecommerce/package.json
@@ -32,7 +32,7 @@
         "@types/node": "^12.20.11",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "@typescript-eslint/parser": "^5.38.1",
+        "@typescript-eslint/parser": "5.48.0",
         "typescript": "^4.7.4"
     }
 }
