--- a/examples/store/package.json
+++ b/examples/store/package.json
@@ -50,7 +50,7 @@
         "@types/node": "^12.20.11",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "@typescript-eslint/parser": "^5.38.1",
+        "@typescript-eslint/parser": "5.48.0",
         "postcss-flexbugs-fixes": "^5.0.2",
         "@types/body-scroll-lock": "^3.1.0",
         "postcss-preset-env": "^7.2.3",
