--- a/examples/tutorial-antd/package.json
+++ b/examples/tutorial-antd/package.json
@@ -8,6 +8,7 @@
         "@pankod/refine-cli": "^1.17.0",
         "@pankod/refine-react-router-v6": "^3.38.0",
         "@pankod/refine-simple-rest": "^3.37.4",
+        "@pankod/refine-inferencer": "^2.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^14.1.1",
