--- a/examples/tutorial-chakra-ui/package.json
+++ b/examples/tutorial-chakra-ui/package.json
@@ -16,6 +16,7 @@
         "@pankod/refine-simple-rest": "^3.37.4",
         "@pankod/refine-react-table": "^4.8.0",
         "@pankod/refine-react-hook-form": "^3.37.2",
+        "@pankod/refine-inferencer": "^2.0.2",
         "react": "^18.0.0",
         "react-dom": "^18.0.0"
     },
