docs(blog): update cover images

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -59,8 +59,8 @@ necati:
     image_url: https://github.com/necatiozmen.png
     description: Feeling Irie
     github: https://github.com/necatiozmen
-    twitter: https://github.com/necatiozmen
-    linkedin: https://github.com/necatiozmen
+    twitter: https://twitter.com/necatiozmen3
+    linkedin: https://www.linkedin.com/in/necatiozmen/
 
 michael:
     name: Michael Hungbo
