fix: infinity list example name

--- a/examples/infinity-list/public/manifest.json
+++ b/examples/infinity-list/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "refine base infinity list example",
-  "name": "refine base infinity list example",
+  "short_name": "refine infinity list example",
+  "name": "refine infinity list example",
   "icons": [
     {
       "src": "favicon.ico",
