--- a/examples/data-use-infinite-list/package.json
+++ b/examples/data-use-infinite-list/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "infinity-list",
+    "name": "data-use-infinite-list",
     "version": "3.25.0",
     "private": true,
     "dependencies": {
