--- a/examples/store/package.json
+++ b/examples/store/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "@headlessui/react": "^1.6.1",
         "nextjs-progressbar": "^0.0.14",
-        "@medusajs/medusa-js": "^1.2.3",
+        "@medusajs/medusa-js": "1.3.3",
         "@pankod/refine-core": "^3.94.2",
         "@pankod/refine-cli": "^1.17.0",
         "@pankod/refine-nextjs-router": "^4.3.0",
