feat: add persist-query example

--- a/examples/with-persist-query/package.json
+++ b/examples/with-persist-query/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "base-headless",
+    "name": "with-persist-query",
     "version": "3.25.0",
     "private": true,
     "dependencies": {
