docs(blog): add author

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -180,3 +180,8 @@ fimber_elemuwa:
     name: Fimber Elemuwa
     title: Web Developer
     image_url: /img/generic-profile.png
+
+peter_osah:
+    name: Peter Osah
+    title: Web Developer
+    image_url: /img/generic-profile.png
