--- a/examples/blog-refine-airtable-crud/package.json
+++ b/examples/blog-refine-airtable-crud/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.8.11",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@types/node": "^12.20.11",
