--- a/examples/tutorial-antd/package.json
+++ b/examples/tutorial-antd/package.json
@@ -25,8 +25,8 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "dev": "refine start",
-        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "dev": "PORT=3005 refine start",
+        "start": "react-scripts start",
         "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
