--- a/examples/pixels/package.json
+++ b/examples/pixels/package.json
@@ -3,7 +3,6 @@
   "version": "3.25.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.2",
     "@pankod/refine-antd": "^4.5.0",
     "@pankod/refine-cli": "^1.5.3",
     "@pankod/refine-core": "^3.90.6",
@@ -13,10 +12,10 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^29.2.4",
-    "craco-less": "^2.0.0",
+    "dotenv": "^16.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
@@ -26,10 +25,9 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "refine": "refine"
   },
   "browserslist": {
