--- a/examples/pixels/package.json
+++ b/examples/pixels/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0",
+    "cross-env": "^7.0.3",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
@@ -25,8 +26,8 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "eject": "react-scripts eject",
     "refine": "refine"
   },
