docs(use-menu): fix port
docs(use-menu): fix manifest name

Co-authored-by: Yıldıray Ünlü <yildirayyunlu@gmail.com>

--- a/examples/core-use-menu/public/manifest.json
+++ b/examples/core-use-menu/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "refine core useModal example",
-  "name": "refine core useModal example",
+  "short_name": "refine core useMenu example",
+  "name": "refine core useMenu example",
   "icons": [
     {
       "src": "favicon.ico",
