--- a/examples/blog-refine-supabase-auth/package.json
+++ b/examples/blog-refine-supabase-auth/package.json
@@ -27,8 +27,8 @@
         "prettier-plugin-tailwindcss": "^0.1.4"
     },
     "scripts": {
-        "dev": "react-scripts start",
-        "build": "react-scripts build",
+        "dev": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "refine": "refine"
